[metadata]
name = moteino-sensors
description-file =
    README.md

[files]
packages =
  moteino_sensors

[entry_points]
console_scripts =
    moteino-api=moteino_sensors.api:main
    moteino-executor=moteino_sensors.executor:main
    moteino-dbsm=moteino_sensors.dbsm:main
    moteino-srl=moteino_sensors.srl:main
    moteino-feeder=moteino_sensors.feeder:main

[wheel]
universal = 1

[flake8]
ignore = E111
max-line-length = 160

[global]
setup-hooks =
    pbr.hooks.setup_hook
    hook.test_hooks
