[metadata]
name = meact
description-file =
    README.md

[files]
packages =
  meact

[entry_points]
console_scripts =
    meact-api=meact.api:main
    meact-executor=meact.executor:main
    meact-dbsm=meact.dbsm:main
    meact-srl=meact.srl:main
    meact-feeder=meact.feeder:main
    meact-manage=meact.manage:main

[wheel]
universal = 1

[flake8]
ignore = E111
max-line-length = 160
